www/css/components/_me-carousel.scss
@import url("https://fonts.googleapis.com/css?family=Permanent Marker&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");

@keyframes fade {
  0% {
    filter: brightness(0.15) var(--col-img-filter);
  }
  33% {
    filter: brightness(0.75) var(--col-img-filter);
  }
  66% {
    filter: brightness(0.9) var(--col-img-filter);
  }
  100% {
    filter: brightness(1);
  }
}

.me-carousel {
  $self: &;

  @include shadow;
  position: relative;
  width: 600px;
  max-width: 100%;
  height: fit-content;
  background: white;
  color: rgb(var(--black));

  &__slides {
    width: 100%;
    height: fit-content;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    list-style: none;
  }

  &__input {
    display: none;

    &:not(:checked) {
      + #{ $self }__slide #{ $self }__slide-content {
        display: none;
      }
    }

    &:checked {
      + #{ $self }__slide {
        width: 100%;

        #{ $self }__slide-image {
          animation: fade 5s forwards;
        }
      }
    }

    @for $i from 1 through 10 {
      &#{
        $self
        }__input--#{$i}:checked
        ~ #{
        $self
        }__controls
        #{
        $self
        }__control-dot--#{$i} {
        background-color: white;
      }
    }
  }

  &__slide {
    height: fit-content;
    background: white;
    aspect-ratio: 16/13.5;
    &::marker {
      display: none;
      content: "";
      position: absolute;
    }

    &-content {
      width: 100%;
      margin-bottom: 80px;
      @media only screen and (min-width: 600px) {
        border: 10px solid white;
        padding: 16px;
        margin-bottom: 0;
        width: calc(100% - 20px - 32px);
      }
    }

    &-image {
      width: 100%;
      height: auto;
      object-fit: cover;
      aspect-ratio: 16/9;
      transition: all 0.75s;
    }

    &-caption {
      font-family: "Permanent Marker";
      font-size: 36px;
      font-display: swap;
      margin: 16px;
      text-align: center;
      word-wrap: break-word;
      word-break: break-word;

      @media only screen and (min-width: 600px) {
        margin: 16px 0px;
      }
    }

    &-description {
      font-family: "Chewy";
      font-display: swap;
      margin: 16px;

      @media only screen and (min-width: 600px) {
        margin: 16px 0px;
      }
    }
  }

  &__controls {
    position: absolute;
    bottom: -10px;
    width: 100%;
    aspect-ratio: 16/9;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;

    @media only screen and (min-width: 600px) {
      bottom: unset;
    }
  }

  &__control-button {
    font-family: "Permanent Marker";
    font-size: 40px;
    font-display: swap;
    padding: 0;
    margin-bottom: 16px;
    border-radius: 50%;
    background: rgb(var(--white));
    border: none !important;
    width: 40px;
    height: 40px;
    cursor: pointer;
    color: rgb(var(--black));

    @media only screen and (min-width: 600px) {
      border: 2px outset rgba(var(--white), 40%) !important;
    }

    &:active {
      border: 2px inset;
      border-color: rgb(var(--white), 40%);
    }

    &--prev {
      @media only screen and (min-width: 600px) {
        margin-left: 48px;
      }
    }

    &--next {
      @media only screen and (min-width: 600px) {
        margin-right: 48px;
      }
      right: 0;
      #{ $self }__control-button-text {
        right: -3px;
      }
    }

    &-text {
      position: relative;
      bottom: 16px;
    }
  }

  &__control-dots {
    display: none;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-bottom: 16px;
    gap: 2px;
    height: 40px;

    @media only screen and (min-width: 600px) {
      display: flex;
    }
  }

  &__control-dot {
    display: block;
    width: 1rem;
    height: 1rem;
    background-color: #111;
    border-radius: 50%;
    cursor: pointer;
  }
}

